downloaded test notebook from ACT collaboration

--- a/act_sample.ipynb
+++ b/act_sample.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -70,16 +70,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7fdf9413f350>"
+       "<matplotlib.collections.PathCollection at 0x7fb6a6fcbd90>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -120,17 +120,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.0 10.7\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import assets.deprojection_index as dedex\n",
     "\n",
@@ -139,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -239,6 +231,16 @@
      "output_type": "stream",
      "text": [
       "Reading mask...\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -253,6 +255,102 @@
     "\n",
     "galmask = mask * invalid\n",
     "# hp.mollview(galmask, title='Galaxy Mask')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filename: /mnt/d/data_large/unwise_sz/ACT/deprojections/cib/ilc_actplanck_ymap_deproj_cib_1.0_10.7.fits\n",
+      "No.    Name      Ver    Type      Cards   Dimensions   Format\n",
+      "  0  PRIMARY       1 PrimaryHDU      20   (43200, 10320)   float32   \n"
+     ]
+    }
+   ],
+   "source": [
+    "from astropy.io import fits\n",
+    "\n",
+    "item = codex[0]\n",
+    "path = item.path\n",
+    "\n",
+    "hdul = fits.open(path)\n",
+    "hdul.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = hdul[0].data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pixell import enmap, enplot, reproject, curvedsky as cs,utils\n",
+    "import healpy as hp\n",
+    "import numpy as np\n",
+    "from astropy.wcs import WCS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['cluster_mask.fits', 'inpainted_regions_mask.fits', 'mask_subtracted_sources.fits', 'wide_mask_GAL070_apod_1.50_deg_wExtended.fits', 'wide_mask_GAL070_apod_1.50_deg_wExtended_hd.fits']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "maskDir = \"/mnt/d/data_large/unwise_sz/ACT/mask/\"\n",
+    "filenameList = os.listdir(maskDir)\n",
+    "print(filenameList)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filename: /mnt/d/data_large/unwise_sz/ACT/mask/cluster_mask.fits\n",
+      "No.    Name      Ver    Type      Cards   Dimensions   Format\n",
+      "  0  PRIMARY       1 PrimaryHDU      20   (43200, 10320)   float64   \n"
+     ]
+    }
+   ],
+   "source": [
+    "hdul = fits.open(maskDir+filenameList[0])\n",
+    "hdul.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "box = np.array([[-63,180],[23,-180]]) * utils.degree\n",
+    "shape,wcs = enmap.geometry(pos=box,res=1 * utils.arcmin,proj='car')"
    ]
   }
  ],
