--- a/ver2/yg_corr_7.ipynb
+++ b/ver2/yg_corr_7.ipynb
@@ -222,8 +222,7 @@
     "\n",
     "y_mask = nmt.mask_apodization(y_mask_raw, 1., apotype='C1').astype(np.float32)\n",
     "hp.mollview(y_mask)\n",
-    "plt.show()\n",
-    "\n"
+    "plt.show()"
    ]
   },
   {
