After discussion revisions

--- a/test.ipynb
+++ b/test.ipynb
@@ -36,10 +36,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filename: /mnt/c/Users/gdzhao/projects/unwise_sz/sweep-000m005-005p000-pz.fits\n",
+      "No.    Name      Ver    Type      Cards   Dimensions   Format\n",
+      "  0  PRIMARY       1 PrimaryHDU       4   ()      \n",
+      "  1                1 BinTableHDU     54   3693911R x 23C   [I, J, J, E, 12A, E, E, E, E, E, E, E, L, I, E, E, E, E, E, E, E, L, I]   \n"
+     ]
+    }
+   ],
+   "source": [
+    "from astropy.io import fits\n",
+    "\n",
+    "hdul = fits.open('/mnt/c/Users/gdzhao/projects/unwise_sz/sweep-000m005-005p000-pz.fits')\n",
+    "hdul.info()\n",
+    "data = hdul[1].data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3693911,)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "ColDefs(\n",
+       "    name = 'RELEASE'; format = 'I'\n",
+       "    name = 'BRICKID'; format = 'J'\n",
+       "    name = 'OBJID'; format = 'J'\n",
+       "    name = 'Z_SPEC'; format = 'E'\n",
+       "    name = 'SURVEY'; format = '12A'\n",
+       "    name = 'Z_PHOT_MEAN'; format = 'E'\n",
+       "    name = 'Z_PHOT_MEDIAN'; format = 'E'\n",
+       "    name = 'Z_PHOT_STD'; format = 'E'\n",
+       "    name = 'Z_PHOT_L68'; format = 'E'\n",
+       "    name = 'Z_PHOT_U68'; format = 'E'\n",
+       "    name = 'Z_PHOT_L95'; format = 'E'\n",
+       "    name = 'Z_PHOT_U95'; format = 'E'\n",
+       "    name = 'TRAINING'; format = 'L'\n",
+       "    name = 'KFOLD'; format = 'I'\n",
+       "    name = 'Z_PHOT_MEAN_I'; format = 'E'\n",
+       "    name = 'Z_PHOT_MEDIAN_I'; format = 'E'\n",
+       "    name = 'Z_PHOT_STD_I'; format = 'E'\n",
+       "    name = 'Z_PHOT_L68_I'; format = 'E'\n",
+       "    name = 'Z_PHOT_U68_I'; format = 'E'\n",
+       "    name = 'Z_PHOT_L95_I'; format = 'E'\n",
+       "    name = 'Z_PHOT_U95_I'; format = 'E'\n",
+       "    name = 'TRAINING_I'; format = 'L'\n",
+       "    name = 'KFOLD_I'; format = 'I'\n",
+       ")"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(data.shape)\n",
+    "\n",
+    "data.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.0977719 , 0.6833625 , 0.7758636 , ..., 0.95597297, 1.126535  ,\n",
+       "       1.2286794 ], dtype='>f4')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "photo_median = data['Z_PHOT_MEDIAN']"
+   ]
   }
  ],
  "metadata": {
